logs/2022-06-21_16-25-36.txt
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100 21.0M  100 21.0M    0     0  64.8M      0 --:--:-- --:--:-- --:--:-- 64.8M
npm WARN deprecated node-pre-gyp@0.17.0: Please upgrade to @mapbox/node-pre-gyp: the non-scoped node-pre-gyp package is deprecated and only the @mapbox scoped package will recieve updates in the future

added 67 packages, and audited 68 packages in 3s

2 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
npm notice 
npm notice New minor version of npm available! 8.5.5 -> 8.12.2
npm notice Changelog: <https://github.com/npm/cli/releases/tag/v8.12.2>
npm notice Run `npm install -g npm@8.12.2` to update!
npm notice 

up to date, audited 37 packages in 588ms

2 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
/home/minecraft/multicraft/servers/server313750/index.js:338
if(!CheckBattleNetTokenValid())){
                               ^

SyntaxError: Unexpected token ')'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
    at node:internal/main/run_main_module:17:47
